[gd_scene load_steps=22 format=3 uid="uid://4kma5uui7ppl"]

[ext_resource type="Script" path="res://microgames/plank_game/plank_scene.gd" id="1_vnkhu"]
[ext_resource type="PackedScene" uid="uid://ddhoio73023ba" path="res://scenes/bomb_timer/bomb_timer.tscn" id="2_43avg"]
[ext_resource type="Texture2D" uid="uid://btyky0yx3xdde" path="res://microgames/plank_game/Assets/background.png" id="2_btbea"]
[ext_resource type="Texture2D" uid="uid://bqp365inqs3y5" path="res://microgames/plank_game/Assets/plank final.png" id="4_f48m6"]
[ext_resource type="Texture2D" uid="uid://jg8pf3npad2j" path="res://microgames/plank_game/Assets/pirate final.png" id="4_iscwk"]
[ext_resource type="Texture2D" uid="uid://cwgj6p14jev5r" path="res://microgames/plank_game/Assets/raft final.png" id="5_ahxmg"]
[ext_resource type="Texture2D" uid="uid://ce6ok4ev2eq65" path="res://microgames/plank_game/Assets/shark final.png" id="6_8ehsr"]
[ext_resource type="Script" path="res://microgames/plank_game/SharkSprite.gd" id="6_147p2"]
[ext_resource type="Script" path="res://microgames/plank_game/Pirate.gd" id="7_m3qv5"]
[ext_resource type="AudioStream" uid="uid://ubytl2lb8337" path="res://microgames/plank_game/Assets/sea_theme_1.wav" id="9_4ycam"]
[ext_resource type="AudioStream" uid="uid://ci4weddabvnd" path="res://microgames/plank_game/Assets/step.wav" id="10_v454r"]
[ext_resource type="AudioStream" uid="uid://bajifq2woy04x" path="res://microgames/plank_game/Assets/jump.wav" id="11_c66e5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6vwyk"]
radius = 17.0
height = 250.052

[sub_resource type="Animation" id="Animation_7t5ob"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-331, -18)]
}

[sub_resource type="Animation" id="Animation_u2yk8"]
resource_name = "bob"
length = 0.60001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(0, -40), Vector2(0, -30)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s3swu"]
_data = {
"RESET": SubResource("Animation_7t5ob"),
"bob": SubResource("Animation_u2yk8")
}

[sub_resource type="Animation" id="Animation_4wr6q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../SharkPosition2/SharkSprite2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -52)]
}

[sub_resource type="Animation" id="Animation_cs0h2"]
resource_name = "bob"
length = 0.60001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../SharkPosition2/SharkSprite2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(0, -62), Vector2(0, -50)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gt3k6"]
_data = {
"RESET": SubResource("Animation_4wr6q"),
"bob": SubResource("Animation_cs0h2")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0mf87"]
size = Vector2(891, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7qusk"]
size = Vector2(70, 20)

[node name="PlankScene" type="Node2D" node_paths=PackedStringArray("bomb_timer")]
script = ExtResource("1_vnkhu")
game_name = "Walk The Plank"
creator_name = "Sujit Patil"
game_description = "Yo ho ho! We be pirates and ye be a scallywag son of a biscuit eater. Now walk the plank, SHARK-BAIT!!"
game_length = 10
message = "Click to move, space to jump!"
control_type = 2
bomb_timer = NodePath("BombTimer")

[node name="BackgroundSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_btbea")
centered = false
metadata/_edit_lock_ = true

[node name="BombTimer" parent="." instance=ExtResource("2_43avg")]
position = Vector2(155, 689)

[node name="RaftSprite" type="Sprite2D" parent="."]
position = Vector2(582, 566)
texture = ExtResource("5_ahxmg")

[node name="SafeArea" type="Area2D" parent="RaftSprite"]
position = Vector2(-15, 18)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RaftSprite/SafeArea"]
position = Vector2(16, -24)
rotation = -1.44781
shape = SubResource("CapsuleShape2D_6vwyk")

[node name="SharkPosition1" type="Node2D" parent="RaftSprite"]
position = Vector2(-331, 0)

[node name="SharkSprite1" type="Sprite2D" parent="RaftSprite/SharkPosition1"]
position = Vector2(-331, -18)
texture = ExtResource("6_8ehsr")
script = ExtResource("6_147p2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="RaftSprite/SharkPosition1/SharkSprite1"]
libraries = {
"": SubResource("AnimationLibrary_s3swu")
}
speed_scale = 0.5

[node name="SharkPosition2" type="Node2D" parent="RaftSprite"]
position = Vector2(230, 0)

[node name="SharkSprite2" type="Sprite2D" parent="RaftSprite/SharkPosition2"]
position = Vector2(0, -52)
scale = Vector2(0.580537, 0.580537)
texture = ExtResource("6_8ehsr")
flip_h = true
script = ExtResource("6_147p2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="RaftSprite/SharkPosition2/SharkSprite2"]
root_node = NodePath("../../../SharkPosition1/SharkSprite1")
libraries = {
"": SubResource("AnimationLibrary_gt3k6")
}
speed_scale = 0.5

[node name="Plank" type="StaticBody2D" parent="."]
position = Vector2(555, 291)
metadata/_edit_group_ = true

[node name="PlankSprite" type="Sprite2D" parent="Plank"]
position = Vector2(68, 61.5)
texture = ExtResource("4_f48m6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plank"]
shape = SubResource("RectangleShape2D_0mf87")

[node name="Pirate" type="CharacterBody2D" parent="." groups=["player"]]
position = Vector2(921, 80)
script = ExtResource("7_m3qv5")
metadata/_edit_group_ = true

[node name="PirateSprite" type="Sprite2D" parent="Pirate"]
position = Vector2(11, -111)
texture = ExtResource("4_iscwk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pirate"]
shape = SubResource("RectangleShape2D_7qusk")

[node name="StepSFX" type="AudioStreamPlayer" parent="Pirate"]
stream = ExtResource("10_v454r")

[node name="JumpSFX" type="AudioStreamPlayer" parent="Pirate"]
stream = ExtResource("11_c66e5")

[node name="Music" type="Node" parent="."]

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("9_4ycam")
autoplay = true

[connection signal="body_entered" from="RaftSprite/SafeArea" to="." method="_on_safe_area_body_entered"]
[connection signal="jumped" from="Pirate" to="." method="_on_pirate_jumped"]
